ver 0.17.2 (2012/??/??)
* protocol:
  - fix crash in local file check
* output:
  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
  - httpd: fix throttling bug after resuming playback
* mapper: fix non-UTF8 music directory name


ver 0.17.1 (2012/07/31)
* protocol:
  - require appropriate permissions for searchadd{,pl}
* tags:
  - aiff: support the AIFC format
  - ape: check for ID3 if no usable APE tag was found
* playlist:
  - cue: support file types "MP3", "AIFF"
* output:
  - fix noisy playback with conversion and software volume

ver 0.17 (2012/06/27)
* protocol:
  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
  - new command "seekcur" for simpler seeking within current song
  - new command "config" dumps location of music directory
  - add range parameter to command "load"
  - print extra "playlist" object for embedded CUE sheets
  - new commands "searchadd", "searchaddpl"
* input:
  - cdio_paranoia: new input plugin to play audio CDs
  - curl: enable CURLOPT_NETRC
  - curl: non-blocking I/O
  - soup: new input plugin based on libsoup
* tags:
  - RVA2: support separate album/track replay gain
* decoder:
  - mpg123: implement seeking
  - ffmpeg: drop support for pre-0.5 ffmpeg
  - ffmpeg: support WebM
  - oggflac: delete this obsolete plugin
  - dsdiff: new decoder plugin
* output:
  - alsa: support DSD-over-USB (dCS suggested standard)
  - httpd: support for streaming to a DLNA client
  - openal: improve buffer cancellation
  - osx: allow user to specify other audio devices
  - osx: implement 32 bit playback
  - shout: add possibility to set url
  - roar: new output plugin for RoarAudio
  - winmm: fail if wrong device specified instead of using default device
* mixer:
  - alsa: listen for external volume changes
* playlist:
  - allow references to songs outside the music directory
  - new CUE parser, without libcue
  - soundcloud: new plugin for accessing soundcloud.com